# agentic-ai-video-ad-generator

./: .env.example  .gitignore  README.md  a2atest.py  generate_structure.py  main.py  pyproject.toml  test_client.py
app/core/: config.py
app/models/: math_models.py  search_models.py  weather_models.py
app/schema/: video_generation_schema.py
app/server/: __init__.py  mcp_server.py  routes.py
app/services/: bing_service.py  google_service.py  math_service.py  weather_service.py
app/tools/: __init__.py  bing_search.py  google_search.py  hello_tool.py  math_tools.py  send_email.py  video_generation.py  weather_tool.py
backend/: .env.example  compliance_server.py  list_structure.py  pinecone_setup.py  project_structure.md  requirements.txt  test.py  test_embeddings.py  testdb.py
backend/app/: adk_app.py  main copy.py  main.py
backend/app/core/: __init__.py  config.py  logging_config.py  uvicorn_config.json
backend/app/db/: base.py  database.py
backend/app/db/orm/: tag.py  (+3 more)
backend/app/memory/: __init__.py  memory_bank_client.py  session_manager.py
backend/app/observability/: __init__.py  adk_plugins.py  logging_plugin.py
backend/app/schemas/: example_schema.py  retrieval_schema.py  video_pipeline_schema.py
backend/app/services/: __init__.py  business_service.py  embedding_service.py  example_service.py  pinecone_service.py  retrieval_service.py  veo_client_service.py
docs/: ADDING_NEW_TOOLS.md  TOOL_FLOW_EXPLAINED.md  Why-APIM-for-MCP-Architecture.md  observability_cheetsheet.md  observability_tutorial.md  runners.md
tests/: test_math_tools.py
(+50 files in other folders)
