[project]
name = "agentic-ai-video-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.17",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.122.0",
    "google-adk>=1.18.0",
    "google-api-python-client>=2.187.0",
    "litellm>=1.80.5",
    "openai>=2.8.1",
    "pinecone>=8.0.0",
    "psycopg>=3.2.13",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]
